--- a/src/app/auth/signup/page.module.css
+++ b/src/app/auth/signup/page.module.css
@@ -26,7 +26,7 @@
   display: flex;
   background-color: white;
   width: 45vw;
-  height: 100vw;
+  height: 100%;
   align-items: center;
   justify-content: center;
   padding: 20px;
