--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,1 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap");
+
+.menu_item {
+  padding: "10px 20px";
+  font-size: "1.2rem";
+}
