--- a/src/components/SportsTable/SportsTable.module.css
+++ b/src/components/SportsTable/SportsTable.module.css
@@ -1,1 +1,1 @@
-@import url("https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=PT+Sans+Narrow:wght@400;700&display=swap");
