--- a/src/components/SportsBar/SportsBar.module.css
+++ b/src/components/SportsBar/SportsBar.module.css
@@ -1,13 +1,14 @@
 /* SportsBar.module.css */
 .bar {
-  background-color: #918a9d;
+  background-color: "white"; 
+;
 }
 
 .tab {
-  color: #ffffff !important; /* Color of text and icon */
+  color: "black" !important; /* Color of text and icon */
 }
 
 .tab.Mui-selected {
-  color: #ffffff !important; /* Color of text and icon when selected */
+  color: "black" !important; /* Color of text and icon when selected */
   background-color: #4a90e2 !important; /* Optional: if you want to change the background of the selected tab */
 }
