--- a/src/app/account/deposit/page.module.css
+++ b/src/app/account/deposit/page.module.css
@@ -29,6 +29,8 @@
   flex-direction: row;
   transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
   border-radius: 10px;
+  width: 100%;
+  height: 50%;
   display: flex;
   flex-direction: row;
   align-items: left;
