--- a/src/components/DepositMethodCard/DepositMethodCard.module.css
+++ b/src/components/DepositMethodCard/DepositMethodCard.module.css
@@ -1,10 +1,11 @@
 .container {
   width: 100%;
-  height: 100%;
+  height: 28.5vh;
   border-radius: 10px;
   border: 1px solid rgb(229, 234, 239);
   padding: 20px;
   margin-top: 20px;
+  margin-right: 20px;
 }
 
 .titleContainer {
